=== HEAD

* Escape ] characters in identifiers on Microsoft SQL Server (jeremyevans)

* Add security guide (jeremyevans)

* Make validates_type handle false values correctly (jeremyevans) (#636)

* Have associations, composition, serialization, and dirty plugins clear caches in some additional cases (jeremyevans) (#635)

* Add alter_table drop_foreign_key method for dropping foreign keys by column names (raxoft, jeremyevans) (#627)

* Allow creation named column constraints via :*_constraint_name column options (jeremyevans)

* Handle drop_constraint :type=>:primary_key on H2 (jeremyevans)

* Handle infinite dates in the postgres adapter using Database#convert_infinite_timestamps (jeremyevans)

* Make the looser_typecasting extension use looser typecasting for decimal columns as well as integers and floats (jeremyevans)

* Do strict typecasting of decimal columns by default, similar to integer/float typecasting (jeremyevans)

=== 3.45.0 (2013-03-01)

* Remove bad model typecasting of money type on PostgreSQL (jeremyevans) (#624)

* Use simplecov instead of rcov for coverage testing on 1.9+ (jeremyevans)

* Make the Database#quote_identifier method public (jeremyevans)

* Make PostgreSQL metadata parsing handle tables with the same name in multiple schemas (jeremyevans)

* Switch query extension to use a proxy instead of Object#extend (chanks, jeremyevans)

* Remove Dataset#def_mutiation_method instance method (jeremyevans)

* Make foreign key parsing on MySQL not pick up foreign keys in other databases (jeremyevans)

* Allow per-instance overrides of Postgres.force_standard_strings and .client_min_messages (jeremyevans) (#618)

* Add Sequel.tzinfo_disambiguator= to the named_timezones plugin for automatically handling TZInfo::AmbiguousTime exceptions (jeremyevans) (#616)

* Add Dataset#escape_like, for escaping LIKE metacharacters (jeremyevans) (#614)

* The LIKE operators now use an explicit ESCAPE '\' clause for similar behavior across databases (jeremyevans)
